--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import "section/global";
 @import "./blocks/modals";
 @import "./blocks/ticker";
+@import "./blocks/form";
 
 // section base
 @import "./section/header";
