добавил последний блок необходимо редактирование контента на всем сайте

--- a/src/scss/section/_global.scss
+++ b/src/scss/section/_global.scss
@@ -13,7 +13,7 @@
 .subtitle {
   font-weight: 600;
   font-style: normal;
-  font-size: rem(24);
+  font-size: var(--h3);
   line-height: 1.6;
   color: var(--color-dark);
   &--tooltip {
