--- a/src/scss/section/_contact.scss
+++ b/src/scss/section/_contact.scss
@@ -1,12 +1,12 @@
 .contact {
-  padding: var(--padding-sub) 0;
+  padding: var(--padding-sub) 0 var(--padding-base);
 
   &__container {
   }
 
   &__title {
     &:not(:last-child) {
-      margin-bottom: clamp-rem(320, 1200, 30, 60);
+      margin-bottom: var(--h2);
     }
   }
 
